# docs/swagger.json
@@ -117,7 +117,7 @@
                 }
             }
         },
-        "/api/v1/projects/{id}": {
+        "/api/v1/projects/{project_id}": {
             "get": {
                 "security": [
                     {
@@ -134,7 +134,7 @@
                     {
                         "type": "integer",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     }
@@ -174,9 +174,9 @@
                 "operationId": "update-project",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     },
@@ -212,7 +212,7 @@
                 }
             }
         },
-        "/api/v1/projects/{id}/branches": {
+        "/api/v1/projects/{project_id}/branches": {
             "get": {
                 "security": [
                     {
@@ -229,7 +229,7 @@
                     {
                         "type": "string",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     }
@@ -268,17 +268,17 @@
                     {
                         "type": "string",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "pipeline config",
+                        "description": "creation request body",
                         "name": "Body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.PipelineConfig"
+                            "$ref": "#/definitions/controller.RequestBranchCreate"
                         }
                     }
                 ],
@@ -304,7 +304,7 @@
                 }
             }
         },
-        "/api/v1/projects/{id}/branches/{name}": {
+        "/api/v1/projects/{project_id}/branches/{branch_name}": {
             "get": {
                 "security": [
                     {
@@ -319,16 +319,16 @@
                 "operationId": "get-branch",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "branch name",
-                        "name": "name",
+                        "name": "branch_name",
                         "in": "path",
                         "required": true
                     }
@@ -370,14 +370,14 @@
                     {
                         "type": "string",
                         "description": "project id",
-                        "name": "id",
+                        "name": "project_id",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "branch name",
-                        "name": "name",
+                        "name": "branch_name",
                         "in": "path",
                         "required": true
                     }
@@ -388,6 +388,61 @@
                         "schema": {
                             "$ref": "#/definitions/entity.Branch"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/projects/{project_id}/branches/{branch_name}/pipelines/{pipeline_name}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create a pipeline",
+                "tags": [
+                    "pipeline"
+                ],
+                "summary": "create a pipeline",
+                "operationId": "create-pipeline",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "project id",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "branch name",
+                        "name": "branch_name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "pipeline name",
+                        "name": "pipeline_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -505,7 +560,7 @@
                 }
             }
         },
-        "/api/v1/users/user/{id}": {
+        "/api/v1/users/user/{user_id}": {
             "get": {
                 "security": [
                     {
@@ -520,9 +575,9 @@
                 "operationId": "get-user",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "account id",
-                        "name": "id",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -566,6 +621,19 @@
                 },
                 "source": {
                     "type": "string"
+                }
+            }
+        },
+        "controller.RequestBranchCreate": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 3
                 }
             }
         },
@@ -651,55 +719,6 @@
                 }
             }
         },
-        "entity.Namespace": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "$ref": "#/definitions/sql.NullTime"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "description": "display name",
-                    "type": "string",
-                    "maxLength": 256,
-                    "minLength": 1
-                },
-                "namespace": {
-                    "description": "parent group",
-                    "$ref": "#/definitions/entity.Namespace"
-                },
-                "namespaces": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Namespace"
-                    }
-                },
-                "parent_id": {
-                    "description": "foreign key for the parent group",
-                    "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "projects": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Project"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.Permission": {
             "type": "object",
             "required": [
@@ -760,10 +779,36 @@
             "properties": {
                 "name": {
                     "type": "string"
+                },
+                "query": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "request_type": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         },
         "entity.PipelineConfigPipeline": {
+            "type": "object",
+            "properties": {
+                "jobs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.PipelineConfigPipelineJob"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.PipelineConfigPipelineJob": {
             "type": "object",
             "properties": {
                 "name": {
@@ -808,12 +853,8 @@
                     "maxLength": 256,
                     "minLength": 1
                 },
-                "namespace": {
-                    "description": "parent group",
-                    "$ref": "#/definitions/entity.Namespace"
-                },
                 "namespace_id": {
-                    "description": "foreign key for the parent group",
+                    "description": "foreign key for the parent namespace",
                     "type": "string"
                 },
                 "path": {
